--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/chai": "^4",
     "@types/mocha": "^10",
     "@types/node": "^18",
+    "@types/node-hid": "^1.3.4",
     "chai": "^4",
     "eslint": "^8",
     "eslint-config-oclif": "^5",
