--- a/package.json
+++ b/package.json
@@ -8,43 +8,56 @@
   },
   "bugs": "https://github.com/metaplex-foundation/cli/issues",
   "dependencies": {
+    "@ardrive/turbo-sdk": "^1.21.0",
     "@ledgerhq/hw-app-solana": "^7.2.4",
     "@ledgerhq/hw-transport": "^6.31.4",
     "@ledgerhq/hw-transport-node-hid-singleton": "^6.31.5",
     "@metaplex-foundation/mpl-core": "^1.1.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
     "@metaplex-foundation/mpl-toolbox": "^0.9.4",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@metaplex-foundation/umi-signer-wallet-adapters": "^0.9.2",
+    "@metaplex-foundation/umi-uploader-irys": "0.9.2",
     "@metaplex-foundation/umi-web3js-adapters": "^0.9.2",
-    "@oclif/core": "^4",
-    "@oclif/plugin-autocomplete": "^3.2.7",
-    "@oclif/plugin-commands": "^4.1.5",
-    "@oclif/plugin-help": "^6",
-    "@oclif/plugin-not-found": "^3.2.24",
-    "@oclif/plugin-plugins": "^5",
-    "@oclif/plugin-version": "^2.2.15",
-    "@solana/web3.js": "^1.95.4",
-    "ansis": "^3.3.2",
-    "p-map": "^7.0.2"
+    "@oclif/core": "^4.1.1",
+    "@oclif/plugin-autocomplete": "^3.2.14",
+    "@oclif/plugin-commands": "^4.1.14",
+    "@oclif/plugin-help": "^6.2.19",
+    "@oclif/plugin-not-found": "^3.2.31",
+    "@oclif/plugin-plugins": "^5.4.22",
+    "@oclif/plugin-version": "^2.2.18",
+    "@solana/web3.js": "^1.98.0",
+    "ansis": "^3.4.0",
+    "cli-progress": "^3.12.0",
+    "inquirer": "^12.3.0",
+    "mime": "^4.0.6",
+    "mime-types": "^2.1.35",
+    "node-fetch": "^3.3.2",
+    "ora": "8.1.1",
+    "p-map": "^7.0.3"
   },
   "devDependencies": {
     "@oclif/prettier-config": "^0.2.1",
-    "@oclif/test": "^4",
-    "@types/chai": "^4",
-    "@types/mocha": "^10",
-    "@types/node": "^18",
+    "@oclif/test": "^4.1.4",
+    "@types/async-retry": "^1.4.9",
+    "@types/bn.js": "^5.1.6",
+    "@types/chai": "^4.3.20",
+    "@types/cli-progress": "^3.11.6",
+    "@types/mime-types": "^2.1.4",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^18.19.68",
     "@types/node-hid": "^1.3.4",
-    "chai": "^4",
-    "eslint": "^8",
-    "eslint-config-oclif": "^5",
-    "eslint-config-oclif-typescript": "^3",
-    "eslint-config-prettier": "^9",
-    "mocha": "^10",
-    "oclif": "^4",
-    "shx": "^0.3.3",
-    "ts-node": "^10",
-    "typescript": "^5"
+    "chai": "^4.5.0",
+    "eslint": "^8.57.1",
+    "eslint-config-oclif": "^5.2.2",
+    "eslint-config-oclif-typescript": "^3.1.13",
+    "eslint-config-prettier": "^9.1.0",
+    "mocha": "^10.8.2",
+    "oclif": "^4.17.0",
+    "shx": "^0.3.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   },
   "engines": {
     "node": ">=20.0.0"
