--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "rootDir": "src",
     "strict": true,
     "target": "es2022",
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
   },
   "include": ["./src/**/*"],
   "ts-node": {
