--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@oclif/plugin-version": "^2.2.18",
     "@solana/web3.js": "^1.98.0",
     "ansis": "^3.4.0",
+    "chalk": "^5.4.1",
     "cli-progress": "^3.12.0",
     "inquirer": "^12.3.0",
     "mime": "^4.0.6",
@@ -46,6 +47,7 @@
     "@types/async-retry": "^1.4.9",
     "@types/bn.js": "^5.1.6",
     "@types/chai": "^4.3.20",
+    "@types/chalk": "^2.2.4",
     "@types/cli-progress": "^3.11.6",
     "@types/inquirer": "^9.0.7",
     "@types/mime-types": "^2.1.4",
