--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ledgerhq/hw-transport": "^6.31.4",
     "@ledgerhq/hw-transport-node-hid-singleton": "^6.31.5",
     "@metaplex-foundation/mpl-core": "^1.1.1",
+    "@metaplex-foundation/mpl-core-candy-machine": "^0.3.0",
     "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
     "@metaplex-foundation/mpl-toolbox": "0.10.0",
     "@metaplex-foundation/umi": "1.0.0",
@@ -31,7 +32,7 @@
     "ansis": "^3.4.0",
     "chalk": "^5.4.1",
     "cli-progress": "^3.12.0",
-    "inquirer": "^12.3.0",
+    "inquirer": "^12.4.2",
     "mime": "^4.0.6",
     "mime-types": "^2.1.35",
     "node-fetch": "^3.3.2",
