Starting validator before test

--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "pnpm run lint",
     "prepack": "oclif manifest && oclif readme",
-    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "pnpm validator && mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md",
     "validator": "CI=1 amman start --config ./.validator.cjs",
     "validator:stop": "amman stop",
