--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Load environment variables
+        run: cat .github/.env >> $GITHUB_ENV
       - name: Install pnpm
         uses: pnpm/action-setup@v4
       - name: Setup Node
@@ -22,6 +24,11 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
           cache: pnpm
+      - name: Start validator
+        uses: metaplex-foundation/actions/start-validator@v1
+        with:
+          node: ${{ matrix.node_version }}
+          solana: ${{ env.SOLANA_VERSION }}
       - run: pnpm install
       - run: pnpm run build
       - run: pnpm run test
