Skip linting for now

--- a/package.json
+++ b/package.json
@@ -106,9 +106,9 @@
     "build:clean": "pnpm run clean && pnpm run build",
     "dev": "./bin/dev.js",
     "mplx": "./bin/run.js",
-    "lint": "eslint . --ext .ts",
+    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts",
+    "lint:fix": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts --fix",
     "postpack": "shx rm -f oclif.manifest.json",
-    "posttest": "pnpm run lint",
     "prepack": "oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md",
