--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Load environment variables
+        run: cat .github/.env >> $GITHUB_ENV
       - name: Install pnpm
         uses: pnpm/action-setup@v4
       - name: Setup Node
