--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           node-version: latest
       - run: pnpm install
+      - run: pnpm build
+      - run: pnpm prepack
       - uses: JS-DevTools/npm-publish@19c28f1ef146469e409470805ea4279d47c3d35c
         with:
           token: ${{ secrets.NPM_TOKEN }}
+      - run: pnpm postpack
