--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
   # We use pnpm for package management.
-  - package-ecosystem: 'pnpm'
+  - package-ecosystem: 'npm'
     # We only have a package.json in the root.
     directory: '/'
     # Check weekly to prevent too many PRs.
