--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@ledgerhq/hw-transport-node-hid-singleton": "^6.31.5",
     "@metaplex-foundation/mpl-core": "^1.4.0",
     "@metaplex-foundation/mpl-core-candy-machine": "^0.3.0",
+    "@metaplex-foundation/mpl-distro": "^0.3.2",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@metaplex-foundation/mpl-toolbox": "0.10.0",
-    "@metaplex-foundation/umi": "1.0.0",
-    "@metaplex-foundation/umi-bundle-defaults": "1.0.0",
-    "@metaplex-foundation/umi-signer-wallet-adapters": "1.0.0",
-    "@metaplex-foundation/umi-uploader-irys": "1.0.1",
+    "@metaplex-foundation/umi": "1.2.0",
+    "@metaplex-foundation/umi-bundle-defaults": "1.2.0",
+    "@metaplex-foundation/umi-signer-wallet-adapters": "1.2.0",
+    "@metaplex-foundation/umi-uploader-irys": "1.2.0",
     "@metaplex-foundation/umi-web3js-adapters": "1.2.0",
     "@oclif/plugin-autocomplete": "^3.2.29",
     "@oclif/plugin-commands": "^4.1.25",
