--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "node-fetch": "^3.3.2",
     "ora": "8.1.1",
     "p-map": "^7.0.3",
-    "untildify": "4.0.0"
+    "untildify": "^4.0.0"
   },
   "devDependencies": {
     "@metaplex-foundation/amman": "^0.12.1",
