--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: latest
+          node-version: 24
           registry-url: https://registry.npmjs.org
       - name: Install npm >= 11.5.1
         run: npm install -g "npm@>=11.5.1"
